[package]
name = "cloudflare-2020-systems-engineering-assignment"
version = "0.1.0"
authors = ["nnazo <jacobcurtis2266@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.19"
url = "2.1.1"
anyhow = "1.0.33"
openssl = "0.10.30"